# SLM-from-scratch

./: .gitignore  README.md  generate.py  main.py  pyproject.toml  script.py
checkpoints/: config.json
notebooks/: slm_colab.ipynb  walkthrough.ipynb.ipynb
notebooks/.ipynb_checkpoints/: Small language model code from scratch-checkpoint.ipynb
src/: attention.py  blocks.py  config.py  data_loader.py  data_pipeline.py  model.py  trainer.py  utils.py
tests/: test_data.py  test_model.py  test_trainer.py
