[project]
name = "slm-from-scratch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "datasets>=4.8.4",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "tiktoken>=0.12.0",
    "torch>=2.11.0",
    "tqdm>=4.67.3",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]